--- a/styles/base.css
+++ b/styles/base.css
@@ -99,6 +99,16 @@ section h1{
     border-radius: 10px;
     text-align: justify;
 }
+.card1 h2{
+    text-align: center;
+    border-radius: 1px;
+    background-color: var(--color-primary);
+    color: var(--color-accent);
+    margin-top: 0%;
+    margin-bottom: 0%;
+    text-align: center;
+    padding: 10px;
+}
 .card2{
     grid-column: 1/ 2;
     grid-row: 1/ 2;
@@ -107,7 +117,7 @@ section h1{
     border-radius: 20px;
     text-align: justify;
 }
-.card2 h3{
+.card2 h2{
     text-align: center;
     border-radius: 1px;
     background-color: var(--color-primary);
@@ -161,7 +171,7 @@ section h1{
     margin-bottom: 50px;
 }
 
-.brasil h2 {
+.brasil h3 {
     text-align: center;
     margin-bottom: 1rem;
     padding-bottom: 50px;
