--- a/styles/place-large.css
+++ b/styles/place-large.css
@@ -114,6 +114,17 @@
     text-align: left;
   }
 
+  .weather-caption::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -10px;
+  width: 10px;
+  height: 100%;
+  background-color: #ffffff55;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  }
 
     .weather td {
         padding: 0.5rem 0;
