--- a/styles/form.css
+++ b/styles/form.css
@@ -11,8 +11,8 @@
 
 body {
     margin: auto;
-    min-width: 300px;
-    max-width: 500px;
+    min-width: 285px;
+    max-width: 750px;
     font-family: "Roboto", sans-serif;
 
 }
@@ -56,6 +56,7 @@ main {
 .rating div {
     display: flex;
     flex-direction: column-reverse;
+    margin-right: 10px;
 }
 
 label {
